# cicada

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions_ota_ab.csv
components/cicada_cmd/: CMakeLists.txt  cicada_cmd.cpp
components/cicada_cmd/include/: cicada_cmd.h
components/cicada_crypto/: CMakeLists.txt  cicada_crypto.cpp
components/cicada_crypto/include/: cicada_crypto.h
components/cicada_mqtt/: CMakeLists.txt  cicada_mqtt.cpp
components/cicada_mqtt/include/: cicada_mqtt.h
components/manifest_client/: CMakeLists.txt  manifest_client.cpp
components/manifest_client/include/: manifest_client.h
components/mqtt_creds/: CMakeLists.txt  Kconfig  mqtt_creds.cpp
components/mqtt_creds/include/: mqtt_creds.h
components/transport_https_ota/: CMakeLists.txt  transport_https_ota.cpp
components/transport_https_ota/include/: transport_https_ota.h
components/trust_store/: CMakeLists.txt  trust_store.cpp
components/trust_store/include/: trust_store.h
components/update_manager/: CMakeLists.txt  update_manager.cpp
components/update_manager/include/: update_manager.h
components/update_policy/: CMakeLists.txt  version_policy.cpp
components/update_policy/include/: version_policy.h
main/: CMakeLists.txt  main.cpp  wifi_sta.cpp  wifi_sta.h
tools/mqtt_broker/: mosquitto.acl  mosquitto.conf
tools/mqtt_cmd/: send_cmd.py
tools/ota_server/: gen_manifest.py  server.py
tools/ota_server/files/: manifest.json
tools/release/: cicada_sign_release.py
